[tool.poetry]
name = "m1"
version = "0.1.0"
description = ""
authors = ["Ben Ramchandani <Ben.Ramchandani@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
